--- a/templates/usuario_rol/index.html.twig
+++ b/templates/usuario_rol/index.html.twig
@@ -13,7 +13,7 @@
 
 {% block _main %}
     <div class="table-responsive">
-        <table class="table table-sm table-striped m-table m-table--head-bg-metal">
+        {{ action.tbl_start() }}
             <thead>
             <tr>
                 {{ action.th('#', false, 'text-center') }}
@@ -57,29 +57,35 @@
     {{ pagination.show(paginator, _section) }}
 {% endblock %}
 
-{% block _main_options %}
-    <form class="m-form m-form--fit m-form--label-align-right m-form--group-seperator-dashed">
-        <div class="m-portlet__body">
-            <div class="form-group m-form__group row">
-                <label class="col-lg-1 col-form-label">Ver:</label>
-                <div class="col-lg-3">
-                    <select id="filter_size" class="form-control m-input" name="n">
-                        {% for key,value in default_results_per_page %}
-                            <option data-content='<span class="d-flex align-items-center g-line-height-1_2 g-color-black">{{ key }}</span>'
-                                    value="{{ value }}" {% if app.request.get('n') == value %} selected {% endif %}>{{key}}</option>
-                        {% endfor %}
-                    </select>
+{% block _main_filters %}
+    <form class="mb-7" id="frm_filters">
+        <div class="row align-items-center">
+            <div class="col-lg-9 col-xl-8">
+                <div class="row align-items-center">
+                    <div class="col-md-4 my-2 my-md-0">
+                        <div class="input-icon">
+                            <input type="text" class="form-control" placeholder="Buscar..." id="filter_text"
+                                   value="{{app.request.get('b')}}" name="b" />
+                            <span>
+                                <i class="flaticon2-search-1 text-muted"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-md-3 my-2 my-md-0">
+                        <div class="d-flex align-items-center">
+                            <label class="mr-3 mb-0 d-none d-md-block" for="filter_active">Activo: </label>
+                            <select class="form-control" id="filter_active" name="ac">
+                                <option value="" {% if app.request.get('ac') == '' %} selected {% endif %}>Todos</option>
+                                <option value="1" {% if app.request.get('ac') == '1' %} selected {% endif %}>Si</option>
+                                <option value="0" {% if app.request.get('ac') == '0' %} selected {% endif %}>No</option>
+                            </select>
+                        </div>
+                    </div>
+                    <button class="btn-send btn btn-light-primary px-6 font-weight-bold mr-2">Aplicar</button>
+                    <input type="reset" class="btn-clear btn btn-outline-secondary mr-2" value="Limpiar" />
                 </div>
-                <label class="col-lg-1 col-form-label">Buscar:</label>
-                <div class="col-lg-3">
-                    <input class="form-control h-100 g-font-size-default g-brd-gray-light-v7 g-brd-lightblue-v3--focus g-rounded-20 g-pl-20 g-pr-50 g-py-10"
-                           id="filter_text" type="text" placeholder="Escriba ..." value="{{app.request.get('b')}}" name="b">
-                </div>
-                <label class="col-lg-1 col-form-label"></label>
-                <div class="col-lg-3">
-                    <button class="btn-send btn btn-brand m-btn m-btn--custom m-btn--icon"><i class="la la-search"></i> Enviar</button>
-                    <button class="btn-clean btn btn-secondary">Limpiar</button>
-                </div>
+            </div>
+            <div class="col-lg-3 col-xl-4 mt-5 mt-lg-0">
             </div>
         </div>
     </form>
@@ -113,16 +119,12 @@
             $(document).on('click', '.btn-send', function(){
                 window.location = '{{ path('usuario_rol_index') }}';
             });
-        });
-    </script>
-{% endblock %}
 
-{% block _javascripts_end %}
-    <script>
-        jQuery(document).ready(function() {
-            {% if app.request.get('b') %}
-            jQuery('#action_options').trigger('click');
-            {% endif %}
+            // Solución: limpiar filtros y recargar sin parámetros
+            $(document).on('click', '.btn-clear', function(e){
+                e.preventDefault();
+                window.location = '{{ path('usuario_rol_index') }}';
+            });
         });
     </script>
 {% endblock %}
