--- a/templates/region/index.html.twig
+++ b/templates/region/index.html.twig
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <button class="btn-send btn btn-light-primary px-6 font-weight-bold mr-2">Aplicar</button>
-                    <button class="btn-clear btn btn-outline-secondary mr-2">Limpiar</button>
+                    <button type="reset" class="btn-clear btn btn-outline-secondary mr-2">Limpiar</button>
                 </div>
             </div>
             <div class="col-lg-3 col-xl-4 mt-5 mt-lg-0">
