--- a/templates/caso_trata/index.html.twig
+++ b/templates/caso_trata/index.html.twig
@@ -22,6 +22,7 @@
             {{ action.th('Centro Poblado', false, 'text-center  d-sm-table-cell') }}
             {{ action.th('Fecha Reporte', false, 'text-center  d-sm-table-cell') }}
             {{ action.th('Tipo Explotaciones', false, 'text-center d-none d-sm-table-cell') }}
+            {{ action.th('Estado', false, 'text-center d-none d-sm-table-cell') }}
             {{ action.th('Detalle', true, 'text-center  d-sm-table-cell') }}
         </tr>
         </thead>
@@ -38,6 +39,7 @@
                 <td class="d-sm-table-cell">{{ tipo.centroPoblado.nombre }}</td>
                 <td class="d-sm-table-cell">{{ tipo.fechaReporte |date('d/m/Y H:i:s') }}</td>
                 <td class="d-sm-table-cell">{{ tipo.tipoExplotacionesGeneral }}</td>
+                <td class="d-sm-table-cell">{{ tipo.getEstadoCaso }}</td>
                 <td class="text-center pr-0">
                     {% if access.has('view') %}
                         {{ action.btn_show_link2(path('caso_trata_show', {'id': tipo.id})) }}
@@ -46,7 +48,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="7">No hay registros</td>
+                <td colspan="8">No hay registros</td>
             </tr>
         {% endfor %}
         </tbody>
