--- a/templates/institucion/index.html.twig
+++ b/templates/institucion/index.html.twig
@@ -136,6 +136,12 @@
                 route = '{{ path('institucion_index') }}';
                 window.location.href = route;
             });
+
+            let hr = $(location).attr('href');
+            const hra = hr.split("?");
+            if (hra.length > 1) {
+                $(".btn-export").attr("href", $(".btn-export").attr("href") + '?' + hra[1]);
+            }
         });
     </script>
 {% endblock %}
