--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -140,6 +140,12 @@
                 let route = '{{ path('menu_index') }}';
                 window.location.href = route;
             });
+
+            let hr = $(location).attr('href');
+            const hra = hr.split("?");
+            if (hra.length > 1) {
+                $(".btn-export").attr("href", $(".btn-export").attr("href") + '?' + hra[1]);
+            }
         });
     </script>
 {% endblock %}
