--- a/templates/usuario_rol/index.html.twig
+++ b/templates/usuario_rol/index.html.twig
@@ -125,6 +125,12 @@
                 e.preventDefault();
                 window.location = '{{ path('usuario_rol_index') }}';
             });
+
+            let hr = $(location).attr('href');
+            const hra = hr.split("?");
+            if (hra.length > 1) {
+                $(".btn-export").attr("href", $(".btn-export").attr("href") + '?' + hra[1]);
+            }
         });
     </script>
 {% endblock %}
