datos en graficos

--- a/templates/agraficos/grafico_desproteccion_index.html.twig
+++ b/templates/agraficos/grafico_desproteccion_index.html.twig
@@ -127,7 +127,7 @@
                                         {{ tipo.nombre }}  </option>
                                 {% endfor %}
                             </select>
-                            <input type="hidden" name="estado" value="Notificado">
+                            <!--<input type="hidden" name="estado" value="Notificado">-->
                         </div>
                     </div>
 
@@ -141,7 +141,7 @@
                                         {{ item.nombre }}  </option>
                                 {% endfor %}
                             </select>
-                            <input type="hidden" name="estado" value="Notificado">
+                            <!--<input type="hidden" name="estado" value="Notificado">-->
                         </div>
                     </div>
 
