--- a/templates/agraficos/grafico_total.html.twig
+++ b/templates/agraficos/grafico_total.html.twig
@@ -117,7 +117,7 @@
                                         {{ item.nombre }}  </option>
                                 {% endfor %}
                             </select>
-                            <input type="hidden" name="estado" value="Notificado">
+                            <!--<input type="hidden" name="estado" value="Notificado">-->
                         </div>
                     </div>
 
