--- a/templates/agraficos/grafico_violencia_index.html.twig
+++ b/templates/agraficos/grafico_violencia_index.html.twig
@@ -130,7 +130,7 @@
                                         {{ tipo.nombre }}  </option>
                                 {% endfor %}
                             </select>
-                            <input type="hidden" name="estado" value="Notificado">
+                            <!--<input type="hidden" name="estado" value="Notificado">-->
                         </div>
                     </div>
 
@@ -144,7 +144,7 @@
                                         {{ item.nombre }}  </option>
                                 {% endfor %}
                             </select>
-                            <input type="hidden" name="estado" value="Notificado">
+                            <!--<input type="hidden" name="estado" value="Notificado">-->
                         </div>
                     </div>
 
