--- a/templates/caso_desproteccion/index.html.twig
+++ b/templates/caso_desproteccion/index.html.twig
@@ -140,7 +140,7 @@
                                         {{ tipo.nombre }}  </option>
                                 {% endfor %}
                             </select>
-                            <input type="hidden" name="estado" value="Notificado">
+                            <!--<input type="hidden" name="estado" value="Notificado">-->
                         </div>
                     </div>
 
