--- a/templates/control_casos/caso_desproteccion.html.twig
+++ b/templates/control_casos/caso_desproteccion.html.twig
@@ -132,7 +132,7 @@
                                         {{ tipo.nombre }}  </option>
                                 {% endfor %}
                             </select>
-                            <input type="hidden" name="estado" value="Notificado">
+                            <!--<input type="hidden" name="estado" value="Notificado">-->
                         </div>
                     </div>
                     <div class="col-md-4 my-2 my-md-0">
