--- a/templates/control_casos/caso_violencia.html.twig
+++ b/templates/control_casos/caso_violencia.html.twig
@@ -132,7 +132,7 @@
                                         {{ tipo.nombre }}  </option>
                                 {% endfor %}
                             </select>
-                            <input type="hidden" name="estado" value="Notificado">
+                            <!--<input type="hidden" name="estado" value="Notificado">-->
                         </div>
                     </div>
 
