--- a/templates/caso_desaparecido/show.html.twig
+++ b/templates/caso_desaparecido/show.html.twig
@@ -22,10 +22,10 @@
             <td class="text-left">
                 <span class="font-weight-bold">Nombres: </span> {{ tipo.nombres|upper }} <br>
                 <span class="font-weight-bold">Apellidos :</span> {{ tipo.apellidos|upper  }} <br>
-                <span class="font-weight-bold">Tipo Documento: </span>    {{ tipo.tipoDocumento.nombre |upper }} <br>
+                <span class="font-weight-bold">Tipo Documento: </span>    {{ tipo.tipoDocumento ? tipo.tipoDocumento.nombre |upper : '' }} <br>
                 <span class="font-weight-bold">Número Documento: </span> {{ tipo.numeroDocumento }}<br>
                 <span class="font-weight-bold">Edad: </span>  {{ tipo.edad }}<br>
-                <span class="font-weight-bold">Sexo: </span> {{ tipo.sexo.nombre |upper }}<br>
+                <span class="font-weight-bold">Sexo: </span> {{ tipo.sexo ? tipo.sexo.nombre |upper : '' }}<br>
 {#                <span class="font-weight-bold">Nacionalidad: </span>  {{ tipo.nacionalidad.nombre|upper  }} <br>#}
                 <span class="font-weight-bold">Teléfono: </span> {{ tipo.telefono}}<br>
                 <span class="font-weight-bold">Email: </span> {{ tipo.email}}<br>            </td>
@@ -38,11 +38,11 @@
             <td class="text-left">
                 <span class="font-weight-bold">Nombres: </span> {{ tipo.nombres |upper }} <br>
                 <span class="font-weight-bold">Apellidos: </span> {{ tipo.apellidos |upper }} <br>
-                <span class="font-weight-bold">Tipo Documento: </span>    {{ tipo.tipoDocumento.nombre |upper }} <br>
+                <span class="font-weight-bold">Tipo Documento: </span>    {{ tipo.tipoDocumento ? tipo.tipoDocumento.nombre |upper : '' }} <br>
                 <span class="font-weight-bold">Número Documento: </span> {{ tipo.numeroDocumento }}<br>
                 <span class="font-weight-bold">Edad: </span> {{ tipo.edad }}<br>
-                <span class="font-weight-bold">Sexo: </span> {{ tipo.sexo.nombre |upper }}<br>
-                <span class="font-weight-bold">Nacionalidad: </span>  {{ tipo.nacionalidad.nombre|upper  }} <br>
+                <span class="font-weight-bold">Sexo: </span> {{ tipo.sexo ? tipo.sexo.nombre |upper : '' }}<br>
+                <span class="font-weight-bold">Nacionalidad: </span>  {{ tipo.nacionalidad ? tipo.nacionalidad.nombre|upper : '' }} <br>
                 <span class="font-weight-bold">Teléfono: </span>  {{ tipo.telefono|upper  }} <br>
                 <span class="font-weight-bold">Discapacidad: </span> {{ tipo.discapacidad|upper }}<br>
                 <span class="font-weight-bold">Lugar de desaparición: </span> {{ tipo.lugarDesaparicion|upper }}<br>
