--- a/templates/caso_desproteccion/show.html.twig
+++ b/templates/caso_desproteccion/show.html.twig
@@ -24,12 +24,12 @@
             <td class="text-left">
                 <span class="font-weight-bold">Nombres: </span> {{ tipo.menorEdad.nombres |upper }} <br>
                 <span class="font-weight-bold">Apellidos :</span> {{ tipo.menorEdad.apellidos|upper  }} <br>
-                <span class="font-weight-bold">Tipo Documento: </span>    {{ tipo.menorEdad.tipoDocumento.nombre |upper }} <br>
+                <span class="font-weight-bold">Tipo Documento: </span>    {{ tipo.menorEdad.tipoDocumento ? tipo.menorEdad.tipoDocumento.nombre |upper : '' }} <br>
                 <span class="font-weight-bold">Número Documento: </span> {{ tipo.menorEdad.numeroDocumento }}<br>
                 <span class="font-weight-bold">Edad: </span>  {{ tipo.menorEdad.edad }}<br>
-                <span class="font-weight-bold">Sexo: </span> {{ tipo.menorEdad.sexo.nombre |upper }}<br>
+                <span class="font-weight-bold">Sexo: </span> {{ tipo.menorEdad.sexo ? tipo.menorEdad.sexo.nombre |upper : '' }}<br>
                 <span class="font-weight-bold">Dirección: </span> {{ tipo.menorEdad.direccion |upper }}<br>
-                <span class="font-weight-bold">Nacionalidad: </span>  {{ tipo.menorEdad.nacionalidad.nombre |upper }}<br>
+                <span class="font-weight-bold">Nacionalidad: </span>  {{ tipo.menorEdad.nacionalidad ? tipo.menorEdad.nacionalidad.nombre |upper : '' }}<br>
                 <span class="font-weight-bold">Situaciones Encontradas: </span>  {{ tipo.situacionesEncontradas |upper }}
             </td>
 
@@ -41,10 +41,10 @@
             <td class="text-left">
                 <span class="font-weight-bold">Nombres: </span> {{ tipo.tutor.nombres |upper }} <br>
                 <span class="font-weight-bold">Apellidos: </span> {{ tipo.tutor.apellidos |upper }} <br>
-                <span class="font-weight-bold">Tipo Documento: </span>    {{ tipo.tutor.tipoDocumento.nombre |upper }} <br>
+                <span class="font-weight-bold">Tipo Documento: </span>    {{ tipo.tutor.tipoDocumento ? tipo.tutor.tipoDocumento.nombre |upper : '' }} <br>
                 <span class="font-weight-bold">Número Documento: </span> {{ tipo.tutor.numeroDocumento }}<br>
-                <span class="font-weight-bold">Sexo: </span> {{ tipo.tutor.sexo.nombre |upper }}<br>
-                <span class="font-weight-bold">Vínculo Familiar: </span>  {{ tipo.tutor.vinculoFamiliar.nombre|upper  }}<br>
+                <span class="font-weight-bold">Sexo: </span> {{ tipo.tutor.sexo ? tipo.tutor.sexo.nombre |upper : '' }}<br>
+                <span class="font-weight-bold">Vínculo Familiar: </span>  {{ tipo.tutor.vinculoFamiliar ? tipo.tutor.vinculoFamiliar.nombre|upper : '' }}<br>
                 <span class="font-weight-bold">Teléfono/Celular: </span>  {{ tipo.tutor.telefono  }}
             </td>
         {% endfor %}
