--- a/templates/caso_trata/show.html.twig
+++ b/templates/caso_trata/show.html.twig
@@ -22,12 +22,12 @@
             <td class="text-left">
                 <span class="font-weight-bold">Nombres: </span> {{ tipo.nombres|upper }} <br>
                 <span class="font-weight-bold">Apellidos :</span> {{ tipo.apellidos|upper  }} <br>
-                <span class="font-weight-bold">Tipo Documento: </span>    {{ tipo.tipoDocumento.nombre |upper }} <br>
+                <span class="font-weight-bold">Tipo Documento: </span>    {{ tipo.tipoDocumento ? tipo.tipoDocumento.nombre |upper : '' }} <br>
                 <span class="font-weight-bold">Número Documento: </span> {{ tipo.numeroDocumento }}<br>
                 <span class="font-weight-bold">Edad: </span>  {{ tipo.edad }}<br>
-                <span class="font-weight-bold">Sexo: </span> {{ tipo.sexo.nombre |upper }}<br>
-                <span class="font-weight-bold">Nacionalidad: </span>  {{ tipo.nacionalidad.nombre|upper  }} <br>
-                <span class="font-weight-bold">Forma Captación: </span>  {{ tipo.formaCaptacion.nombre|upper  }} <br>
+                <span class="font-weight-bold">Sexo: </span> {{ tipo.sexo ? tipo.sexo.nombre |upper : '' }}<br>
+                <span class="font-weight-bold">Nacionalidad: </span>  {{ tipo.nacionalidad ? tipo.nacionalidad.nombre|upper : '' }} <br>
+                <span class="font-weight-bold">Forma Captación: </span>  {{ tipo.formaCaptacion ? tipo.formaCaptacion.nombre|upper : '' }} <br>
             </td>
 
         {% endfor %}
@@ -38,11 +38,11 @@
             <td class="text-left">
                 <span class="font-weight-bold">Nombres: </span> {{ tipo.nombres |upper }} <br>
                 <span class="font-weight-bold">Apellidos: </span> {{ tipo.apellidos |upper }} <br>
-                <span class="font-weight-bold">Tipo Documento: </span>    {{ tipo.tipoDocumento.nombre |upper }} <br>
+                <span class="font-weight-bold">Tipo Documento: </span>    {{ tipo.tipoDocumento ? tipo.tipoDocumento.nombre |upper : '' }} <br>
                 <span class="font-weight-bold">Número Documento: </span> {{ tipo.numeroDocumento }}<br>
                 <span class="font-weight-bold">Edad: </span> {{ tipo.edad }}<br>
-                <span class="font-weight-bold">Sexo: </span> {{ tipo.sexo.nombre |upper }}<br>
-                <span class="font-weight-bold">Nacionalidad: </span>  {{ tipo.nacionalidad.nombre|upper  }} <br>
+                <span class="font-weight-bold">Sexo: </span> {{ tipo.sexo ? tipo.sexo.nombre |upper : '' }}<br>
+                <span class="font-weight-bold">Nacionalidad: </span>  {{ tipo.nacionalidad ? tipo.nacionalidad.nombre|upper : '' }} <br>
                 <span class="font-weight-bold">Tipo Explotaciones: </span>  {{ tipo.tipoExplotaciones|upper  }} <br>
                 <span class="font-weight-bold">Lugar y forma de rescate: </span> {{ tipo.lugarFormaRescate|upper }}<br>
             </td>
