--- a/templates/historial/historial_caso_trata.html.twig
+++ b/templates/historial/historial_caso_trata.html.twig
@@ -12,8 +12,67 @@
 {% endblock %}
 
 {% block _main %}
-    <div class="table-responsive">
-        {{ action.tbl_start('table-sm table-bordered') }}
+
+
+            <form class="form" id="frm_filters">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="filter_text">Nombres</label>
+                            <input type="text" class="form-control" placeholder="Buscar..." id="filter_text"
+                                   value="{{app.request.get('b')}}" name="b" />
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="select_provincias">Provincia</label>
+                            <select name="provincia" id="select_provincias" class="form-control">
+                                <option value="" selected>Seleccione</option>
+                                {% for provincia in provincias  %}
+                                    <option value="{{ provincia.id }}" {{ provincia.id == provinciaId ? "selected":"" }}>
+                                        {{ provincia.nombre }}
+                                    </option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="select_distritos">Distrito</label>
+                            <select name="distrito" id="select_distritos" class="form-control">
+                                <option value="">Seleccione</option>
+                                {% for distrito in distritos %}
+                                    <option value="{{ distrito.id }}">{{ distrito.nombre }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="select_centros">Centro Poblado</label>
+                            <select name="centroPoblado" id="select_centros" class="form-control">
+                                <option value="">Seleccione</option>
+                                {% for centro in centrosPoblados %}
+                                    <option value="{{ centro.id }}">{{ centro.nombre }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md-12">
+                        <button type="button" class="btn-send btn btn-primary">
+                            <i class="fas fa-search"></i> Buscar
+                        </button>
+                        <button type="button" onclick="actionForm('frm_filters')" class="btn-excel btn btn-success ml-2">
+                            <i class="fas fa-file-excel"></i> Exportar
+                        </button>
+                    </div>
+                </div>
+            </form>
+<br />
+            <div class="table-responsive">
+                {{ action.tbl_start('table-sm table-bordered') }}
         <thead class="table-primary">
         <tr>
             <th class="text-center pb-10" rowspan="2">Nº</th>
@@ -61,92 +120,23 @@
             </tr>
         {% endfor %}
         </tbody>
-        {{ action.tbl_end() }}
-    </div>
+                {{ action.tbl_end() }}
+            </div>
+            {{ pagination.pager(paginator, _section) }}
 
-    {{ pagination.pager(paginator, _section) }}
+
 {% endblock %}
 
 {% block _main_filters %}
-    <form class="mb-7" id="frm_filters">
-        <div class="row align-items-center">
-            <div class="col-lg-12 col-xl-12">
-                <div class="row align-items-center">
-                    <div class="col-md-3 my-2 my-md-0">
-                        <div class="form-group">
-                            <label for="centros">Nombres</label>
-                            <div class="input-icon">
-                                <input type="text" class="form-control" placeholder="Buscar..." id="filter_text"
-                                       value="{{app.request.get('b')}}" name="b" />
-                                <span>
-                                    <i class="flaticon2-search-1 text-muted"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 my-2 my-md-0">
-                        <div class="form-group">
-                            <label for="provincia">Provincia</label>
-                            <select name="provincia" id="select_provincias" class="form-control m-select2">
-                                <option value="" selected>Seleccione</option>
-                                {% for provincia in provincias  %}
-                                    <option value="{{ provincia.id }}" {{ provincia.id == provinciaId ? "selected":"" }}>
-                                        {{ provincia.nombre }}
-                                    </option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="col-md-3 my-2 my-md-0">
-                        <div class="form-group">
-                            <label for="distrito">Distrito</label>
-                            <select name="distrito" id="select_distritos" class="form-control m-select2">
-                                {% if odistrito is not null %}
-                                    <option value="{{ odistrito.id }}" >
-                                        {{ odistrito.nombre }}
-                                    </option>
-                                {% endif %}
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-md-3 my-2 my-md-0">
-                        <div class="form-group">
-                            <label for="centroPoblado">Centro Poblado</label>
-                            <select name="centroPoblado" id="select_centros" class="form-control m-select2">
-                                {% if ocentro is not null %}
-                                    <option value="{{ ocentro.id }}" >
-                                        {{ ocentro.nombre }}
-                                    </option>
-                                {% endif %}
-                            </select>
-                        </div>
-                    </div>
-
-                    <button class="btn-send btn btn-light-primary px-6 font-weight-bold mr-2 ml-3">Buscar</button>
-                    <button type="button" onclick="actionForm(this.form.id)"
-                            class="btn-excel btn btn-light-primary px-6 font-weight-bold mr-2">
-                        <i class="fas fa-file-excel"></i>
-                        Exportar
-                    </button>
-                </div>
-            </div>
-            <div class="col-lg-3 col-xl-4 mt-5 mt-lg-0">
-            </div>
-        </div>
-    </form>
 {% endblock %}
 
 {% block _main_tools %}
-
 {% endblock %}
 
 {% block _main_footer %}
-
 {% endblock%}
 
 {% block _main_actions %}
-
 {% endblock %}
 
 {% block _stylesheets %}
@@ -166,7 +156,6 @@
         }
 
         $(document).ready(function() {
-            $('.m-select2').select2({placeholder:"Seleccione"});
             $(document).on('change', '#filter_size', function(){
                 route = '{{ path('historial_trata_index') }}';
                 window.location = filter(route);
@@ -183,36 +172,42 @@
             });
 
             $("#select_provincias").change(function () {
-                var data = {
-                    provincia_id: $(this).val()
-                };
+                var provinciaId = $(this).val();
+                
+                if (provinciaId === "") {
+                    $("#select_distritos").html('<option value="">Seleccione</option>');
+                    $("#select_centros").html('<option value="">Seleccione</option>');
+                    return;
+                }
+                
                 $.ajax({
-                    type: 'POST',
-                    url: "{{ path('distrito_ajax') }}",
-                    data: data,
+                    type: 'GET',
+                    url: "{{ path('ubigeo_distritos_ajax', {'provinciaId': 'ID'}) }}".replace('ID', provinciaId),
                     success: function (data) {
                         var $selector = $('#select_distritos');
-                        //alert(data);
-                        $selector.html('<option>Seleccione Distrito</option>');
+                        $selector.html('<option value="">Seleccione</option>');
                         for (var i = 0, total = data.length; i < total; i++) {
                             $selector.append('<option value="' + data[i].id + '">' + data[i].name + '</option>');
                         }
+                        $("#select_centros").html('<option value="">Seleccione</option>');
                     }
                 });
             });
 
             $("#select_distritos").change(function () {
-                var data = {
-                    distrito_id: $(this).val()
-                };
+                var distritoId = $(this).val();
+                
+                if (distritoId === "") {
+                    $("#select_centros").html('<option value="">Seleccione</option>');
+                    return;
+                }
+                
                 $.ajax({
-                    type: 'POST',
-                    url: "{{ path('centros_ajax') }}",
-                    data: data,
+                    type: 'GET',
+                    url: "{{ path('ubigeo_centros_ajax', {'distritoId': 'ID'}) }}".replace('ID', distritoId),
                     success: function (data) {
                         var $selector = $('#select_centros');
-                        //alert(data);
-                        $selector.html('<option>Seleccione Centro Poblado</option>');
+                        $selector.html('<option value="">Seleccione</option>');
                         for (var i = 0, total = data.length; i < total; i++) {
                             $selector.append('<option value="' + data[i].id + '">' + data[i].name + '</option>');
                         }
